# BaizeMusic

./: .gitignore  LICENSE  README.md  app.json  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  turbo.json
.cspell/: custom-words.txt
apps/backend/server/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/backend/server/src/: index.ts
apps/backend/server/src/music/: scanTracks.ts
apps/frontend/destop/: index.html  package.json  vite.config.ts
apps/frontend/destop/src/: App.tsx  main.tsx  styles.css
apps/frontend/destop/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/destop/src-tauri/capabilities/: default.json
apps/frontend/destop/src-tauri/src/: main.rs
apps/frontend/mobile/: App.tsx  app.json  metro.config.cjs  package.json  react-native.config.js  tsconfig.json
apps/frontend/mobile/android key/: isteyft-key.keystore  key.txt
apps/frontend/mobile/scripts/: build-release.ps1  start-emulator.ps1
apps/frontend/website/: index.html  package.json  tsconfig.json
apps/frontend/website/src/: App.tsx  styles.css
doc/: cover-read-fix.md  desktop-latest-updates.md  latest-feature-updates.md  mobile-latest-updates.md  playmode-update.md  react-music-player-requirements.md  step1-completion.md  step2-completion.md  step3-completion.md  step4-completion.md  step5-completion.md  step6-completion.md  step7-completion.md  ui-polish-latest.md  website-to-tauri-migration.md
music/: 六等星的夜.lrc  咏春-七朵组合.lrc  知我.lrc
patches/: expo-av@15.0.2.patch
